--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://WenyuD.github.io/PhotoGallery"
+  "homepage": "http://WenyuD.github.io/PhotoGallery",
   "name": "project",
   "version": "0.1.0",
   "private": true,
